# ucv-ate-si-laboratorio08

./: .gitignore  README.md  sonar-project.properties
laboratorio-adk-ucv/: pyproject.toml
laboratorio-adk-ucv/agente_ucv/: agent.py
