[project]
name = "lab08-si"
version = "0.1.0"
description = ""
authors = [
    {name = "Santiagoacostazamora",email = "oacostaz@ucvvirtual.edu.pe"}
]
requires-python = ">=3.13"
dependencies = [
    "google-adk (>=2.1.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
